tests/paczka1/fuzzy1/27192168.err
Error in line 17: UAGmnp S301 74,8
Error in line 18: UAGmnp S706 62,8
Error in line 30: yl9nfXdnz A306 81,7
Error in line 32: Zp73Q8Z S301 21,0
